--- a/src/Map.css
+++ b/src/Map.css
@@ -10,3 +10,32 @@
 .map .leaflet-container {
     height: 100%;
 }
+
+.info-flag img {
+    width: 100px;
+    border-radius: 5px;
+}
+
+.info-flag {
+    height: 80px;
+    width: 100%;
+    background-size: cover;
+    border-radius: 8px;
+}
+
+.info-name {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  padding: 5px 0;
+}
+
+.info-confirmed,
+.info-recovered,
+.info-deaths {
+    font-size: 16px;
+    margin-top: 5px;
+}
+.info-container {
+    width: 150px;
+}
