--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 .app {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 15px;
 }
 
 .app__header {
@@ -18,6 +19,14 @@ body {
   margin-bottom: 20px;
 }
 
+.app__header > h1 {
+   color: #fc3c3c;
+   font-size: 2rem;
+}
+
+.app_dropdown {
+  background-color: #fff;
+}
 .app__left {
   flex: 0.9;
 }
