Make the graph to take the remaining height

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,20 @@ body {
   justify-content: space-between;
 }
 
+.app__right {
+  display: flex;
+  flex-direction: column;
+}
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app__graph {
+  flex-grow: 1;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
