--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@ body {
   flex-grow: 1;
 }
 
+.app__graphTitle {
+  margin: 20px 0;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
